my-website/versioned_docs/version-0.9.0/api/alphabetical-index.mdx
---
title: "Alphabetical Index"
sidebarTitle: "Alphabetical Index"
description: "Alphabetical index of all API symbols."
---

## A

- [abs() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.abs)
- [account_key (AzureAccountKeyCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.account_key)
- [ACCOUNT_KEY_KEY (AzureAccountKeyCredentials attribute)](/versions/0.9.0/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.ACCOUNT_KEY_KEY)
- [account_name (AzureAccountKeyCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.account_name)
- [add() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.add)
- [add_business_days() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.add_business_days)
- [agg() (TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.agg)
- [alias() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.alias)
- [and_() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.and_)
- [arccos() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arccos)
- [arccosh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arccosh)
- [arcsin() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arcsin)
- [arcsinh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arcsinh)
- [arctan() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arctan)
- [arctanh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.arctanh)
- [aws_access_key_id (S3AccessKeyCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.S3AccessKeyCredentials.aws_access_key_id)
- [aws_secret_access_key (S3AccessKeyCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.S3AccessKeyCredentials.aws_secret_access_key)
- [AzureAccountKeyCredentials (class in tabsdata.credentials)](/versions/0.9.0/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials)
- [AzureDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination)
- [AzureSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureSource)

## B

- [base_utc_offset() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.base_utc_offset)

## C

- [cast() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.cast)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.cast)
- [cast_time_unit() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.cast_time_unit)
- [cbrt() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.cbrt)
- [ceil() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.ceil)
- [century() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.century)
- check_polars_api() (in module tabsdata.tableframe.lazyframe.frame)
- [clear() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.clear)
- [clip() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.clip)
- [columns (TableFrame property)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.columns)
- [combine() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.combine)
- concat() (in module tabsdata)
  - (in module tabsdata.tableframe.functions.eager)
- [contains() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.contains)
- [contains_any() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.contains_any)
- [convert_time_zone() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.convert_time_zone)
- [cos() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.cos)
- [cosh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.cosh)
- [cot() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.cot)
- [count() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.count)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.count)
- [count_matches() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.count_matches)
- [credentials (AzureDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.credentials)
  - [(AzureSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.credentials)
  - [(MariaDBDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.credentials)
  - [(MariaDBSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.credentials)
  - [(MySQLDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.credentials)
  - [(MySQLSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.credentials)
  - [(OracleDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.credentials)
  - [(OracleSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.credentials)
  - [(PostgresDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.credentials)
  - [(PostgresSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.credentials)
  - [(S3Destination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.credentials)
  - [(S3Source property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source.credentials)
- [CSVFormat (class in tabsdata.format)](/versions/0.9.0/api/fileformats#tabsdata.format.CSVFormat)

## D

- [date() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.date)
- [datetime() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.datetime)
- [day() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.day)
- [degrees() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.degrees)
- [destination_table (MariaDBDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.destination_table)
  - [(MySQLDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.destination_table)
  - [(OracleDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.destination_table)
  - [(PostgresDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.destination_table)
- [DestinationPlugin (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.DestinationPlugin)
- [diff() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.diff)
- [DirectSecret (class in tabsdata.secret)](/versions/0.9.0/api/credentials#tabsdata.secret.DirectSecret)
- [drop() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.drop)
- [drop_nans() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.drop_nans)
- [drop_nulls() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.drop_nulls)
- [dst_offset() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.dst_offset)
- [dt (Expr property)](/versions/0.9.0/api/tableframe#tabsdata.Expr.dt)
- [dtypes (TableFrame property)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.dtypes)

## E

- [empty() (TableFrame class method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.empty)
- [ends_with() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.ends_with)
- [EnvironmentSecret (class in tabsdata.secret)](/versions/0.9.0/api/credentials#tabsdata.secret.EnvironmentSecret)
- [epoch() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.epoch)
- [eq() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.eq)
- [eq_missing() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.eq_missing)
- [exp() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.exp)
- [explain() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.explain)
- [Expr (class in tabsdata)](/versions/0.9.0/api/tableframe#tabsdata.Expr)
- [extract() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.extract)

## F

- [FileFormat (class in tabsdata.format)](/versions/0.9.0/api/fileformats#tabsdata.format.FileFormat)
- [fill_nan() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.fill_nan)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.fill_nan)
- [fill_null() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.fill_null)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.fill_null)
- [filter() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.filter)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.filter)
- [find() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.find)
- [first() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.first)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.first)
- [floor() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.floor)
- [floordiv() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.floordiv)
- [format (AzureDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.format)
  - [(AzureSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.format)
  - [(LocalFileDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination.format)
  - [(LocalFileSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.format)
  - [(S3Destination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.format)
  - [(S3Source property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source.format)

## G

- [ge() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.ge)
- get_class_methods() (in module tabsdata.tableframe.lazyframe.frame)
- get_missing_methods() (in module tabsdata.tableframe.lazyframe.frame)
- [group_by() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.group_by)
- [gt() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.gt)

## H

- [hash() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.hash)
- [head() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.head)
  - [(TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.head)
- [hour() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.hour)

## I

- [if_table_exists (MariaDBDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.if_table_exists)
  - [(MySQLDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.if_table_exists)
  - [(OracleDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.if_table_exists)
  - [(PostgresDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.if_table_exists)
- [initial_last_modified (AzureSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.initial_last_modified)
  - [(LocalFileSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.initial_last_modified)
  - [(S3Source property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source.initial_last_modified)
- [initial_values (MariaDBSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.initial_values)
  - [(MySQLSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.initial_values)
  - [(OracleSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.initial_values)
  - [(PostgresSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.initial_values)
  - [(SourcePlugin property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin.initial_values)
- [inspect() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.inspect)
- [is_between() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_between)
- [is_finite() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_finite)
- [is_in() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_in)
- [is_infinite() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_infinite)
- [is_leap_year() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.is_leap_year)
- [is_nan() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_nan)
- [is_not_nan() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_not_nan)
- [is_not_null() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_not_null)
- [is_null() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_null)
- [is_unique() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.is_unique)
- [iso_year() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.iso_year)

## J

- [join() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.join)

## L

- [last() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.last)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.last)
- [le() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.le)
- [len() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.len)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.len)
- [len_bytes() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.len_bytes)
- [len_chars() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.len_chars)
- [limit() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.limit)
- lit() (in module tabsdata)
  - (in module tabsdata.tableframe.functions.lit)
- [LocalFileDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination)
- [LocalFileSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource)
- [log() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.log)
- [log10() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.log10)
- [log1p() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.log1p)
- [LogFormat (class in tabsdata.format)](/versions/0.9.0/api/fileformats#tabsdata.format.LogFormat)
- [lt() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.lt)

## M

- [MariaDBDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination)
- [MariaDBSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource)
- [max() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.max)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.max)
- [mean() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.mean)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.mean)
- [median() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.median)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.median)
- [microsecond() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.microsecond)
- [millennium() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.millennium)
- [millisecond() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.millisecond)
- [min() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.min)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.min)
- [minute() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.minute)
- [mod() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.mod)
- tabsdata.tableframe.expr.expr
  - tabsdata.tableframe.expr.expr
  - tabsdata.tableframe.expr.string
  - tabsdata.tableframe.functions.col
  - tabsdata.tableframe.functions.datetime
  - tabsdata.tableframe.functions.eager
  - tabsdata.tableframe.functions.lit
  - tabsdata.tableframe.lazyframe.frame
  - tabsdata.tableframe.lazyframe.group_by
  - tabsdata.utils.tableframe
- [month() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.month)
- [month_end() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.month_end)
- [month_start() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.month_start)
- [mul() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.mul)
- [MySQLDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination)
- [MySQLSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource)

## N

- [n_unique() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.n_unique)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.n_unique)
- [nanosecond() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.nanosecond)
- [NDJSONFormat (class in tabsdata.format)](/versions/0.9.0/api/fileformats#tabsdata.format.NDJSONFormat)
- [ne() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.ne)
- [ne_missing() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.ne_missing)
- [neg() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.neg)
- [not_() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.not_)

## O

- [offset_by() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.offset_by)
- [or_() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.or_)
- [OracleDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination)
- [OracleSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleSource)
- [ordinal_day() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.ordinal_day)

## P

- [pad_end() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.pad_end)
- [pad_start() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.pad_start)
- [ParquetFormat (class in tabsdata.format)](/versions/0.9.0/api/fileformats#tabsdata.format.ParquetFormat)
- [password (UserPasswordCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.UserPasswordCredentials.password)
- [path (LocalFileDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination.path)
  - [(LocalFileSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.path)
- [PostgresDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination)
- [PostgresSource (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource)
- [pow() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.pow)
- [publisher() (in module tabsdata.decorators)](/versions/0.9.0/api/decorators#tabsdata.decorators.publisher)

## Q

- [quarter() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.quarter)
- [query (MariaDBSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.query)
  - [(MySQLSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.query)
  - [(OracleSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.query)
  - [(PostgresSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.query)

## R

- [radians() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.radians)
- [rank() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.rank)
- [region (S3Destination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.region)
  - [(S3Source property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source.region)
- [reinterpret() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.reinterpret)
- [replace() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.replace)
  - [(TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.replace)
- [replace_all() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.replace_all)
- [replace_many() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.replace_many)
- [replace_time_zone() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.replace_time_zone)
- [reverse() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.reverse)
- [round() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.round)
- [round_sig_figs() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.round_sig_figs)

## S

- [S3AccessKeyCredentials (class in tabsdata.credentials)](/versions/0.9.0/api/credentials#tabsdata.credentials.S3AccessKeyCredentials)
- [S3Destination (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Destination)
- [S3Source (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source)
- [schema (TableFrame property)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.schema)
- [second() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.second)
- [Secret (class in tabsdata.secret)](/versions/0.9.0/api/credentials#tabsdata.secret.Secret)
- [secret_value (DirectSecret property)](/versions/0.9.0/api/credentials#tabsdata.secret.DirectSecret.secret_value)
  - [(EnvironmentSecret property)](/versions/0.9.0/api/credentials#tabsdata.secret.EnvironmentSecret.secret_value)
- [select() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.select)
- [show_graph() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.show_graph)
- [shrink_dtype() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.shrink_dtype)
- [sign() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sign)
- [sin() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sin)
- [sinh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sinh)
- [slice() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.slice)
  - [(TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.slice)
  - [(TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.slice)
- [sort() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.sort)
- [SourcePlugin (class in tabsdata.tabsdatafunction)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin)
- [sqrt() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sqrt)
- [starts_with() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.starts_with)
- [str (Expr property)](/versions/0.9.0/api/tableframe#tabsdata.Expr.str)
- [strftime() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.strftime)
- [strip_chars() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.strip_chars)
- [strip_chars_end() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.strip_chars_end)
- [strip_chars_start() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.strip_chars_start)
- [strip_prefix() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.strip_prefix)
- [strip_suffix() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.strip_suffix)
- [sub() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sub)
- [subscriber() (in module tabsdata.decorators)](/versions/0.9.0/api/decorators#tabsdata.decorators.subscriber)
- [sum() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.sum)
  - [(TdLazyGroupBy method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy.sum)

## T

- [TableFrame (class in tabsdata)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame)
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- [tail() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.tail)
  - [(TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.tail)
- [tan() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.tan)
- [tanh() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.tanh)
- TdCol (class in tabsdata.tableframe.functions.col)
- [TdExprDateTimeNameSpace (class in tabsdata.tableframe.functions.datetime)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace)
- [TdExprStringNameSpace (class in tabsdata.tableframe.expr.string)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace)
- [TdLazyGroupBy (class in tabsdata.tableframe.lazyframe.group_by)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TdLazyGroupBy)
- TdPolarsType (class in tabsdata.tableframe.lazyframe.frame)
- [time() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.time)
- [timestamp() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.timestamp)
- [to_date() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_date)
- [to_datetime() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_datetime)
- [to_integer() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_integer)
- [to_lowercase() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_lowercase)
- [to_string() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.to_string)
- to_tdexpr() (in module tabsdata.tableframe.expr.string)
- [to_time() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_time)
- [to_titlecase() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_titlecase)
- [to_uppercase() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.to_uppercase)
- [total_days() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_days)
- [total_hours() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_hours)
- [total_microseconds() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_microseconds)
- [total_milliseconds() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_milliseconds)
- [total_minutes() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_minutes)
- [total_nanoseconds() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_nanoseconds)
- [total_seconds() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.total_seconds)
- [transformer() (in module tabsdata.decorators)](/versions/0.9.0/api/decorators#tabsdata.decorators.transformer)
- [trigger_input() (SourcePlugin method)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin.trigger_input)
- [trigger_output() (DestinationPlugin method)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.DestinationPlugin.trigger_output)
- [truediv() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.truediv)
- [truncate() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.truncate)

## U

- [unique() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.unique)
- [uri (AzureDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.uri)
  - [(AzureSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.uri)
  - [(MariaDBDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.uri)
  - [(MariaDBSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.uri)
  - [(MySQLDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.uri)
  - [(MySQLSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.uri)
  - [(OracleDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.uri)
  - [(OracleSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.uri)
  - [(PostgresDestination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.uri)
  - [(PostgresSource property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.uri)
  - [(S3Destination property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.uri)
  - [(S3Source property)](/versions/0.9.0/api/connectors-list#tabsdata.tabsdatafunction.S3Source.uri)
- [user (UserPasswordCredentials property)](/versions/0.9.0/api/credentials#tabsdata.credentials.UserPasswordCredentials.user)
- [UserPasswordCredentials (class in tabsdata.credentials)](/versions/0.9.0/api/credentials#tabsdata.credentials.UserPasswordCredentials)

## W

- [week() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.week)
- [weekday() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.weekday)
- [width (TableFrame property)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.width)
- [with_columns() (TableFrame method)](/versions/0.9.0/api/tableframe#tabsdata.TableFrame.with_columns)
- [with_time_unit() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.with_time_unit)

## X

- [xor() (Expr method)](/versions/0.9.0/api/tableframe#tabsdata.Expr.xor)

## Y

- [year() (TdExprDateTimeNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.functions.datetime.TdExprDateTimeNameSpace.year)

## Z

- [zfill() (TdExprStringNameSpace method)](/versions/0.9.0/api/tableframe#tabsdata.tableframe.expr.string.TdExprStringNameSpace.zfill)

